testsuite/tests/grammar/invalid_token_families/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- or(Identifier(@identifier) | Number(@number))
}
